# foundryvtt-docker

./: .editorconfig  .flake8  .gitignore  .mdl_config.yaml  .pre-commit-config.yaml  .yamllint  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  bump-version  compose.yml  package-lock.json  package.json  pyproject.toml  render-docs-check  render_docs.py  requirements-test.txt  setup-env  setup.py
.github/: FUNDING.yml  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  regression.yml
.github/rulesets/: README.md
.github/workflows/: _config.yml  build.yml  codeql-analysis.yml  container-test.yml  dependency-review.yml  docker-pytest-image.yml  label-automerge.yml  scorecards.yml  stale-issues.yml  sync-labels.yml
docs/cookbooks/cloudflare/: README.md  compose.yml
src/: authenticate.ts  backoff.sh  check_health.sh  entrypoint.sh  get_license.ts  get_release_url.ts  launcher.sh  logging.ts  patch_lang.ts  set_options.ts  set_password.ts  version.txt
tests/: conftest.py  container_test.py  test_launcher.py
